@@ -4,6 +4,9 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.16-32 (opened October 24, 2009)
 
+	* msoplot: uses standard legend() to display info instead of hand
+	crafted positioning of the legend information.
+
 	* ordisurf: plotting main title was broken with NA handling in
 	1.16-31 (r1049). Also increased grid density and adjusted pushing
 	out limits of convex hull.
